--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,11 @@ nav > ul {
 
 nav > ul > li {
   margin: auto;
+  transition: var(--ease-elastic-3) .3s;
+}
+
+nav > ul > li:hover {
+  transform: scale(var(--scale-size));
 }
 
 #headline {
