--- a/styles.css
+++ b/styles.css
@@ -99,13 +99,19 @@ nav > ul > li:hover {
   transform: scale(var(--scale-size));
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 #headline {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
-  border-radius: var(--radius-1);
 }
 
 #headline > h1 {
@@ -138,6 +144,39 @@ nav > ul > li:hover {
 
 #headline > button:hover {
   transform: scale(var(--scale-size));
+}
+
+#about-me {
+  display: none;
+  margin: var(--size-2);
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+#about-me > h2 {
+  font-size: var(--font-size-fluid-2);
+  font-weight: var(--font-weight-8);
+  color: var(--grey-9);
+}
+
+#about-me > ul {
+  margin-right: 18%;
+}
+
+#about-me > ul > li {
+  font-size: var(--font-size-fluid-0);
+  font-weight: var(--font-weight-4);
+  line-height: var(--font-lineheight-2);
+  color: var(--grey-9);
+  width: var(--size-fluid-9);
+  padding: var(--size-3);
+  margin: var(--size-3);
+  background: var(--gradient-29);
+  color: var(--grey-9);
+  border-radius: var(--radius-2);
+  box-shadow: var(--shadow-4);
 }
 
 @media (prefers-reduced-motion: reduce) {
